<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/to"
        android:layout_gravity="center"
        android:id="@+id/txtTo"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtTo"
        android:id="@+id/eTxtTo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/subject"
        android:layout_gravity="center"
        android:id="@+id/txtSubject"
        android:layout_below="@+id/eTxtTo"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtSubject"
        android:layout_below="@+id/txtTo"
        android:id="@+id/eTxtSubject"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/message"
        android:layout_gravity="center"
        android:id="@+id/txtMessage"
        android:layout_below="@+id/txtSubject"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMessage"
        android:id="@+id/eTxtMessage"
        android:inputType="textMultiLine"
        android:lines="3"
        android:gravity="top|left"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendemail"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/eTxtMessage"
        android:id="@+id/btnSend"/>




</RelativeLayout>