<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text=""
        android:layout_gravity="center"
        android:id="@+id/txtpadding"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_below="@+id/txtpadding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/mobileNumber"
        android:layout_gravity="center"
        android:id="@+id/txtMobileNumber"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpadding"
        android:layout_toRightOf="@+id/txtMobileNumber"
        android:id="@+id/edittextMobileNumber"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveMobilePhoneNumber"
        android:id="@+id/checkBoxSaveMobileNumber"
        android:layout_below="@id/edittextMobileNumber"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/meetingDesc"
        android:layout_gravity="center"
        android:id="@+id/textviewMeetingDetails"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/checkBoxSaveMobileNumber"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxSaveMobileNumber"
        android:layout_toRightOf="@+id/textviewMeetingDetails"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/textMeetingDetails"/>


    <Button
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/getlocation"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/textviewMeetingDetails"
        android:id="@+id/buttonGetLocation"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveDetailsDatabase"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/buttonGetLocation"
        android:id="@+id/buttonSaveDetailsDatabase"/>


</RelativeLayout>